# Sutra

./: .gitignore  README.md  pubspec.yaml  run_integration_test.sh
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  sutra_llama.cpp
integration_test/: ios_model_response_test.dart  model_response_test.dart
ios/Runner/: AppDelegate.swift  DeviceChannelPlugin.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/RunnerTests/: DeviceChannelPluginTests.swift
lib/: main.dart
lib/app/: app.dart  app_bootstrap.dart  bootstrap.dart
lib/app/theme/: app_theme.dart  theme_provider.dart
lib/core/: feature_flags.dart
lib/core/logging/: log.dart
lib/core/storage/: chat_db.dart  chat_repository.dart  prefs_helper.dart
lib/core/widgets/: info_row.dart  settings_row.dart
lib/features/chat/: chat_message.dart  chat_provider.dart  chat_screen.dart  chat_state.dart  citation_helpers.dart  conversation_list_screen.dart  file_picker_provider.dart  file_storage_service.dart  model_selection.dart  title_generator.dart  uploaded_file.dart
lib/features/files/: files_screen.dart
lib/features/models/: models_screen.dart  stream_session.dart
lib/features/settings/: settings_screen.dart
lib/runtime/audio/: audio_runtime.dart
lib/runtime/context/: context_settings.dart  (+1 more)
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+150 files in other folders)
